https/example-ingress.yaml
apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    name: example-ingress
    annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /$1
  spec:
    rules:
    - host: example.ciao
      http:
        paths:
        - path: /
          backend:
            serviceName: hello-world
            servicePort: 80
