https/hello-world-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: example.ciao
    http:
      paths:
      - path: /
        backend:
          serviceName: hello-world
          servicePort: 80
